<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Power Managing Device Scheduler</string>
    <string name="app_name">PMDS</string>
    <string name="manual_sched">Manual schedules</string>
    <string name="auto_sched">Automatic schedules</string>
    <string name="by_device">By device</string>
    <string name="by_date">By date</string>
    <string name="new_schedule_item">New schedule item</string>
    <string name="set_to">Set to:</string>
    <string name="set_day_to">Set day to:</string>
    <string name="set_time_to">Set time to:</string>
    <string name="for_">For:</string>
    <string name="off_">OFF</string>
    <string name="on_">ON</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="warning">Warning!</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this item?</string>
    <string name="cancel">Cancel</string>
    <string name="learning_mode">Learning mode</string>
    <string name="update_auto_database">Update database</string>
    
    <string name="options">Options</string>
    <string name="deactivate_all">Deactivate all</string>
    <string name="activate_all">Activate all</string>
    <string name="delete_all">Delete all</string>
    
    <string name="manual_device_schedule_title">Schedules for devices</string>
    <string name="manual_date_schedule_title">Schedules for dates</string>
    
    <string name="new_wifi">New WiFi schedule item</string>
    <string name="new_rot">New autorotation schedule item</string>
    <string name="new_bt">New Bluetooth schedule item</string>
    <string name="new_screen">New brightness schedule item</string>
    <string name="new_cpu">New CPU schedule item</string>
    <string name="active_schedule">Set as active schedule item</string>
     

    <string name="cpu">CPU</string>
    <string name="wifi">WiFi</string>
    <string name="screen">Screen</string>
    <string name="autorotation">Autorotation</string>
    <string name="bluetooth">Bluetooth</string>

    
    <string-array name="devices_array">
        <item name="cpu_device">CPU</item>
        <item name="wifi_device">WiFi</item>
        <item name="screen_device">Screen</item>
        <item name="autorotation_device">Autorotation</item>
        <item name="bluetooth_device">Bluetooth</item>
    </string-array>
    
    <string-array name="modes_array">
        <item name="ondemand_m">ondemand</item>
        <item name="powersave_m">powersave</item>
        <item name="conservative_m">conservative</item>
    </string-array>
    
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    
    <string name="monday_full">Monday</string>
    <string name="tuesday_full">Tuesday</string>
    <string name="wednesday_full">Wednesday</string>
    <string name="thursday_full">Thursday</string>
    <string name="friday_full">Friday</string>
    <string name="saturday_full">Saturday</string>
    <string name="sunday_full">Sunday</string>

</resources>