<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/for_"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/cpuBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cpu" />

    <Button
        android:id="@+id/wifiBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wifi" />

    <Button
        android:id="@+id/screenBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/screen" />

    <Button
        android:id="@+id/bluetoothBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth" />

    <Button
        android:id="@+id/rotationBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/autorotation" />

</LinearLayout>