<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_screen"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/screenActiveCB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/active_schedule"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/screenValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_to"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/screenBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="255" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_time_to"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <TimePicker
        android:id="@+id/screenTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_day_to"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/screenMonCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="0"
            android:text="@string/monday" />

        <CheckBox
            android:id="@+id/screenTueCB"
            android:layout_column="2"
            android:layout_row="0"
            android:text="@string/tuesday" />

        <CheckBox
            android:id="@+id/screenWedCB"
            android:layout_column="3"
            android:layout_row="0"
            android:text="@string/wednesday" />

        <CheckBox
            android:id="@+id/screenThuCB"
            android:layout_column="4"
            android:layout_gravity="bottom"
            android:layout_row="0"
            android:text="@string/thursday" />

        <CheckBox
            android:id="@+id/screenFriCB"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="bottom"
            android:layout_row="1"
            android:text="@string/friday" />

        <CheckBox
            android:id="@+id/screenSatCB"
            android:layout_column="2"
            android:layout_gravity="bottom"
            android:layout_row="1"
            android:text="@string/saturday" />


        <Space
            android:layout_width="75dp"
            android:layout_height="1dp"
            android:layout_column="5"
            android:layout_row="0" />

        <CheckBox
            android:id="@+id/screenSunCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="1"
            android:text="@string/sunday" />

        <Space
            android:layout_width="42dp"
            android:layout_height="1dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0" />
    </GridLayout>

    <Button
        android:id="@+id/saveScreenBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />
    
</LinearLayout>
</ScrollView>